--- a/notebook/EDA STUDENT PERFORMANCE.ipynb
+++ b/notebook/EDA STUDENT PERFORMANCE.ipynb
@@ -47,8 +47,8 @@
        "      <th>lunch</th>\n",
        "      <th>test preparation course</th>\n",
        "      <th>math score</th>\n",
-       "      <th>reading score</th>\n",
-       "      <th>writing score</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>reading_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -119,7 +119,7 @@
        "3    male        group A          associate's degree  free/reduced   \n",
        "4    male        group C                some college      standard   \n",
        "\n",
-       "  test preparation course  math score  reading score  writing score  \n",
+       "  test preparation course  math score  reading_score  reading_score  \n",
        "0                    none          72             72             74  \n",
        "1               completed          69             90             88  \n",
        "2                    none          90             95             93  \n",
@@ -171,8 +171,8 @@
        "lunch                          0\n",
        "test preparation course        0\n",
        "math score                     0\n",
-       "reading score                  0\n",
-       "writing score                  0\n",
+       "reading_score                  0\n",
+       "reading_score                  0\n",
        "dtype: int64"
       ]
      },
@@ -225,8 +225,8 @@
       " 3   lunch                        1000 non-null   object\n",
       " 4   test preparation course      1000 non-null   object\n",
       " 5   math score                   1000 non-null   int64 \n",
-      " 6   reading score                1000 non-null   int64 \n",
-      " 7   writing score                1000 non-null   int64 \n",
+      " 6   reading_score                1000 non-null   int64 \n",
+      " 7   reading_score                1000 non-null   int64 \n",
       "dtypes: int64(3), object(5)\n",
       "memory usage: 62.6+ KB\n"
      ]
@@ -250,8 +250,8 @@
        "lunch                           2\n",
        "test preparation course         2\n",
        "math score                     81\n",
-       "reading score                  72\n",
-       "writing score                  77\n",
+       "reading_score                  72\n",
+       "reading_score                  77\n",
        "dtype: int64"
       ]
      },
@@ -291,8 +291,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>math score</th>\n",
-       "      <th>reading score</th>\n",
-       "      <th>writing score</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>reading_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -349,7 +349,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       math score  reading score  writing score\n",
+       "       math score  reading_score  reading_score\n",
        "count  1000.00000    1000.000000    1000.000000\n",
        "mean     66.08900      69.169000      68.054000\n",
        "std      15.16308      14.600192      15.195657\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -482,8 +482,8 @@
    ],
    "source": [
     "categorical_cols = [\n",
-    "    'gender', 'race/ethnicity', 'parental level of education', \n",
-    "    'lunch', 'test preparation course'\n",
+    "    'gender', 'race_ethnicity', 'parental_level_of_education', \n",
+    "    'lunch', 'test_preparation_course'\n",
     "]\n",
     "\n",
     "for col in categorical_cols:\n",
@@ -499,7 +499,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We have 3 numerical features : ['math score', 'reading score', 'writing score']\n",
+      "We have 3 numerical features : ['math score', 'reading_score', 'reading_score']\n",
       "\n",
       "We have 5 categorical features : ['gender', 'race/ethnicity', 'parental level of education', 'lunch', 'test preparation course']\n"
      ]
@@ -545,8 +545,8 @@
        "      <th>lunch</th>\n",
        "      <th>test preparation course</th>\n",
        "      <th>math score</th>\n",
-       "      <th>reading score</th>\n",
-       "      <th>writing score</th>\n",
+       "      <th>reading_score</th>\n",
+       "      <th>reading_score</th>\n",
        "      <th>total_score</th>\n",
        "      <th>average</th>\n",
        "    </tr>\n",
@@ -629,7 +629,7 @@
        "3    male        group A          associate's degree  free/reduced   \n",
        "4    male        group C                some college      standard   \n",
        "\n",
-       "  test preparation course  math score  reading score  writing score  \\\n",
+       "  test preparation course  math score  reading_score  reading_score  \\\n",
        "0                    none          72             72             74   \n",
        "1               completed          69             90             88   \n",
        "2                    none          90             95             93   \n",
@@ -673,8 +673,8 @@
     }
    ],
    "source": [
-    "reading_full = df[df['reading score'] == 100]['average'].count()\n",
-    "writing_full = df[df['writing score'] == 100]['average'].count()\n",
+    "reading_full = df[df['reading_score'] == 100]['average'].count()\n",
+    "writing_full = df[df['reading_score'] == 100]['average'].count()\n",
     "math_full = df[df['math score'] == 100]['average'].count()\n",
     "\n",
     "print(f\"Number of students with full marks in maths: {math_full}\")\n",
@@ -698,8 +698,8 @@
     }
    ],
    "source": [
-    "reading_full = df[df['reading score'] <= 20]['average'].count()\n",
-    "writing_full = df[df['writing score'] <= 20]['average'].count()\n",
+    "reading_full = df[df['reading_score'] <= 20]['average'].count()\n",
+    "writing_full = df[df['reading_score'] <= 20]['average'].count()\n",
     "math_full = df[df['math score'] <= 20]['average'].count()\n",
     "\n",
     "print(f\"Number of students with less than 20 marks in maths: {math_full}\")\n",
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -778,17 +778,17 @@
    "source": [
     "plt.subplots(1,3,figsize=(25,6))\n",
     "plt.subplot(141)\n",
-    "sns.histplot(data=df,x='average',kde=True,hue='parental level of education')\n",
+    "sns.histplot(data=df,x='average',kde=True,hue='parental_level_of_education')\n",
     "plt.subplot(142)\n",
-    "sns.histplot(data=df[df.gender=='female'],x='average',kde=True,hue='parental level of education')\n",
+    "sns.histplot(data=df[df.gender=='female'],x='average',kde=True,hue='parental_level_of_education')\n",
     "plt.subplot(143)\n",
-    "sns.histplot(data=df[df.gender=='male'],x='average',kde=True,hue='parental level of education')\n",
+    "sns.histplot(data=df[df.gender=='male'],x='average',kde=True,hue='parental_level_of_education')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -805,11 +805,11 @@
    "source": [
     "plt.subplots(1,3,figsize=(25,6))\n",
     "plt.subplot(141)\n",
-    "ax =sns.histplot(data=df,x='average',kde=True,hue='race/ethnicity')\n",
+    "ax =sns.histplot(data=df,x='average',kde=True,hue='race_ethnicity')\n",
     "plt.subplot(142)\n",
-    "ax =sns.histplot(data=df[df.gender=='female'],x='average',kde=True,hue='race/ethnicity')\n",
+    "ax =sns.histplot(data=df[df.gender=='female'],x='average',kde=True,hue='race_ethnicity')\n",
     "plt.subplot(143)\n",
-    "ax =sns.histplot(data=df[df.gender=='male'],x='average',kde=True,hue='race/ethnicity')\n",
+    "ax =sns.histplot(data=df[df.gender=='male'],x='average',kde=True,hue='race_ethnicity')\n",
     "plt.show()"
    ]
   },
@@ -835,11 +835,11 @@
     "plt.title('MATH SCORES')\n",
     "sns.violinplot(y='math score',data=df,color='red',linewidth=3)\n",
     "plt.subplot(1, 4, 2)\n",
-    "plt.title('READING SCORES')\n",
-    "sns.violinplot(y='reading score',data=df,color='green',linewidth=3)\n",
+    "plt.title('reading_scoreS')\n",
+    "sns.violinplot(y='reading_score',data=df,color='green',linewidth=3)\n",
     "plt.subplot(1, 4, 3)\n",
-    "plt.title('WRITING SCORES')\n",
-    "sns.violinplot(y='writing score',data=df,color='blue',linewidth=3)\n",
+    "plt.title('reading_scoreS')\n",
+    "sns.violinplot(y='reading_score',data=df,color='blue',linewidth=3)\n",
     "plt.show()\n"
    ]
   },
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -883,12 +883,12 @@
     "\n",
     "\n",
     "plt.subplot(1, 5, 2)\n",
-    "size = df['race/ethnicity'].value_counts()\n",
+    "size = df['race_ethnicity'].value_counts()\n",
     "labels = 'Group C', 'Group D','Group B','Group E','Group A'\n",
     "color = ['red', 'green', 'blue', 'cyan','orange']\n",
     "\n",
     "plt.pie(size, colors = color,labels = labels,autopct = '.%2f%%')\n",
-    "plt.title('Race/Ethnicity', fontsize = 20)\n",
+    "plt.title('race_ethnicity', fontsize = 20)\n",
     "plt.axis('off')\n",
     "\n",
     "\n",
@@ -904,7 +904,7 @@
     "\n",
     "\n",
     "plt.subplot(1, 5, 4)\n",
-    "size = df['test preparation course'].value_counts()\n",
+    "size = df['test_preparation_course'].value_counts()\n",
     "labels = 'None', 'Completed'\n",
     "color = ['red','green']\n",
     "\n",
@@ -914,7 +914,7 @@
     "\n",
     "\n",
     "plt.subplot(1, 5, 5)\n",
-    "size = df['parental level of education'].value_counts()\n",
+    "size = df['parental_level_of_education'].value_counts()\n",
     "labels = 'Some College', \"Associate's Degree\",'High School','Some High School',\"Bachelor's Degree\",\"Master's Degree\"\n",
     "color = ['red', 'green', 'blue', 'cyan','orange','grey']\n",
     "\n",
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1106,17 +1106,17 @@
    ],
    "source": [
     "f,ax=plt.subplots(1,2,figsize=(20,10))\n",
-    "sns.countplot(x=df['race/ethnicity'],data=df,palette = 'bright',ax=ax[0],saturation=0.95)\n",
+    "sns.countplot(x=df['race_ethnicity'],data=df,palette = 'bright',ax=ax[0],saturation=0.95)\n",
     "for container in ax[0].containers:\n",
     "    ax[0].bar_label(container,color='black',size=20)\n",
     "    \n",
-    "plt.pie(x = df['race/ethnicity'].value_counts(),labels=df['race/ethnicity'].value_counts().index,explode=[0.1,0,0,0,0],autopct='%1.1f%%',shadow=True)\n",
+    "plt.pie(x = df['race_ethnicity'].value_counts(),labels=df['race_ethnicity'].value_counts().index,explode=[0.1,0,0,0,0],autopct='%1.1f%%',shadow=True)\n",
     "plt.show()   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1131,7 +1131,7 @@
     }
    ],
    "source": [
-    "Group_data2=df.groupby('race/ethnicity')\n",
+    "Group_data2=df.groupby('race_ethnicity')\n",
     "f,ax=plt.subplots(1,3,figsize=(20,8))\n",
     "sns.barplot(x=Group_data2['math score'].mean().index,y=Group_data2['math score'].mean().values,palette = 'mako',ax=ax[0])\n",
     "ax[0].set_title('Math score',color='#005ce6',size=20)\n",
@@ -1139,14 +1139,14 @@
     "for container in ax[0].containers:\n",
     "    ax[0].bar_label(container,color='black',size=15)\n",
     "\n",
-    "sns.barplot(x=Group_data2['reading score'].mean().index,y=Group_data2['reading score'].mean().values,palette = 'flare',ax=ax[1])\n",
-    "ax[1].set_title('Reading score',color='#005ce6',size=20)\n",
+    "sns.barplot(x=Group_data2['reading_score'].mean().index,y=Group_data2['reading_score'].mean().values,palette = 'flare',ax=ax[1])\n",
+    "ax[1].set_title('reading_score',color='#005ce6',size=20)\n",
     "\n",
     "for container in ax[1].containers:\n",
     "    ax[1].bar_label(container,color='black',size=15)\n",
     "\n",
-    "sns.barplot(x=Group_data2['writing score'].mean().index,y=Group_data2['writing score'].mean().values,palette = 'coolwarm',ax=ax[2])\n",
-    "ax[2].set_title('Writing score',color='#005ce6',size=20)\n",
+    "sns.barplot(x=Group_data2['reading_score'].mean().index,y=Group_data2['reading_score'].mean().values,palette = 'coolwarm',ax=ax[2])\n",
+    "ax[2].set_title('reading_score',color='#005ce6',size=20)\n",
     "\n",
     "for container in ax[2].containers:\n",
     "    ax[2].bar_label(container,color='black',size=15)"
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
    "source": [
     "plt.rcParams['figure.figsize'] = (15, 9)\n",
     "plt.style.use('fivethirtyeight')\n",
-    "sns.countplot(df['parental level of education'], palette = 'Blues')\n",
+    "sns.countplot(df['parental_level_of_education'], palette = 'Blues')\n",
     "plt.title('Comparison of Parental Education', fontweight = 30, fontsize = 20)\n",
     "plt.xlabel('Degree')\n",
     "plt.ylabel('count')\n",
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
     }
    ],
    "source": [
-    "df.groupby('parental level of education').agg('mean').plot(kind='barh',figsize=(10,10))\n",
+    "df.groupby('parental_level_of_education').agg('mean').plot(kind='barh',figsize=(10,10))\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
     "plt.show()"
    ]
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1299,12 +1299,12 @@
    ],
    "source": [
     "f,ax=plt.subplots(1,2,figsize=(20,8))\n",
-    "sns.countplot(x=df['parental level of education'],data=df,palette = 'bright',hue='test preparation course',saturation=0.95,ax=ax[0])\n",
-    "ax[0].set_title('Students vs test preparation course ',color='black',size=25)\n",
+    "sns.countplot(x=df['parental_level_of_education'],data=df,palette = 'bright',hue='test_preparation_course',saturation=0.95,ax=ax[0])\n",
+    "ax[0].set_title('Students vs test_preparation_course ',color='black',size=25)\n",
     "for container in ax[0].containers:\n",
     "    ax[0].bar_label(container,color='black',size=20)\n",
     "    \n",
-    "sns.countplot(x=df['parental level of education'],data=df,palette = 'bright',hue='lunch',saturation=0.95,ax=ax[1])\n",
+    "sns.countplot(x=df['parental_level_of_education'],data=df,palette = 'bright',hue='lunch',saturation=0.95,ax=ax[1])\n",
     "for container in ax[1].containers:\n",
     "    ax[1].bar_label(container,color='black',size=20)   "
    ]
@@ -1335,13 +1335,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Axes: xlabel='lunch', ylabel='writing score'>"
+       "<Axes: xlabel='lunch', ylabel='reading_score'>"
       ]
      },
      "execution_count": 39,
@@ -1362,11 +1362,11 @@
    "source": [
     "plt.figure(figsize=(12,6))\n",
     "plt.subplot(2,2,1)\n",
-    "sns.barplot (x=df['lunch'], y=df['math score'], hue=df['test preparation course'])\n",
+    "sns.barplot (x=df['lunch'], y=df['math score'], hue=df['test_preparation_course'])\n",
     "plt.subplot(2,2,2)\n",
-    "sns.barplot (x=df['lunch'], y=df['reading score'], hue=df['test preparation course'])\n",
+    "sns.barplot (x=df['lunch'], y=df['reading_score'], hue=df['test_preparation_course'])\n",
     "plt.subplot(2,2,3)\n",
-    "sns.barplot (x=df['lunch'], y=df['writing score'], hue=df['test preparation course'])"
+    "sns.barplot (x=df['lunch'], y=df['reading_score'], hue=df['test_preparation_course'])"
    ]
   },
   {
@@ -1405,9 +1405,9 @@
     "plt.subplot(141)\n",
     "sns.boxplot(df['math score'],color='skyblue')\n",
     "plt.subplot(142)\n",
-    "sns.boxplot(df['reading score'],color='hotpink')\n",
+    "sns.boxplot(df['reading_score'],color='hotpink')\n",
     "plt.subplot(143)\n",
-    "sns.boxplot(df['writing score'],color='yellow')\n",
+    "sns.boxplot(df['reading_score'],color='yellow')\n",
     "plt.subplot(144)\n",
     "sns.boxplot(df['average'],color='lightgreen')\n",
     "plt.show()"
@@ -1470,7 +1470,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
