--- a/notebook/MODEL TRAINING.ipynb
+++ b/notebook/MODEL TRAINING.ipynb
@@ -1495,10 +1495,10 @@
      "text": [
       "Categories in 'gender' variable:      ['female' 'male']\n",
       "Categories in 'race_ethnicity' variable:   ['group B' 'group C' 'group A' 'group D' 'group E']\n",
-      "Categories in'parental level of education' variable: [\"bachelor's degree\" 'some college' \"master's degree\" \"associate's degree\"\n",
+      "Categories in'parental_level_of_education' variable: [\"bachelor's degree\" 'some college' \"master's degree\" \"associate's degree\"\n",
       " 'high school' 'some high school']\n",
       "Categories in 'lunch' variable:      ['standard' 'free/reduced']\n",
-      "Categories in 'test preparation course' variable:      ['none' 'completed']\n"
+      "Categories in 'test_preparation_course' variable:      ['none' 'completed']\n"
      ]
     }
    ],
@@ -1509,13 +1509,13 @@
     "print(\"Categories in 'race_ethnicity' variable:  \",end=\" \")\n",
     "print(df['race_ethnicity'].unique())\n",
     "\n",
-    "print(\"Categories in'parental level of education' variable:\",end=\" \" )\n",
+    "print(\"Categories in'parental_level_of_education' variable:\",end=\" \" )\n",
     "print(df['parental_level_of_education'].unique())\n",
     "\n",
     "print(\"Categories in 'lunch' variable:     \",end=\" \" )\n",
     "print(df['lunch'].unique())\n",
     "\n",
-    "print(\"Categories in 'test preparation course' variable:     \",end=\" \" )\n",
+    "print(\"Categories in 'test_preparation_course' variable:     \",end=\" \" )\n",
     "print(df['test_preparation_course'].unique())"
    ]
   },
