--- a/notebook/MODEL_TRAINING.ipynb
+++ b/notebook/MODEL_TRAINING.ipynb
@@ -52,12 +52,12 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>gender</th>\n",
-       "      <th>race/ethnicity</th>\n",
-       "      <th>parental level of education</th>\n",
+       "      <th>race_ethnicity</th>\n",
+       "      <th>parental_level_of_education</th>\n",
        "      <th>lunch</th>\n",
-       "      <th>test preparation course</th>\n",
+       "      <th>test_preparation_course</th>\n",
        "      <th>math score</th>\n",
-       "      <th>reading score</th>\n",
+       "      <th>reading_score</th>\n",
        "      <th>writing score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -122,14 +122,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   gender race/ethnicity parental level of education         lunch  \\\n",
+       "   gender race_ethnicity parental_level_of_education         lunch  \\\n",
        "0  female        group B           bachelor's degree      standard   \n",
        "1  female        group C                some college      standard   \n",
        "2  female        group B             master's degree      standard   \n",
        "3    male        group A          associate's degree  free/reduced   \n",
        "4    male        group C                some college      standard   \n",
        "\n",
-       "  test preparation course  math score  reading score  writing score  \n",
+       "  test_preparation_course  math score  reading_score  writing score  \n",
        "0                    none          72             72             74  \n",
        "1               completed          69             90             88  \n",
        "2                    none          90             95             93  \n",
@@ -183,11 +183,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>gender</th>\n",
-       "      <th>race/ethnicity</th>\n",
-       "      <th>parental level of education</th>\n",
+       "      <th>race_ethnicity</th>\n",
+       "      <th>parental_level_of_education</th>\n",
        "      <th>lunch</th>\n",
-       "      <th>test preparation course</th>\n",
-       "      <th>reading score</th>\n",
+       "      <th>test_preparation_course</th>\n",
+       "      <th>reading_score</th>\n",
        "      <th>writing score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -247,14 +247,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   gender race/ethnicity parental level of education         lunch  \\\n",
+       "   gender race_ethnicity parental_level_of_education         lunch  \\\n",
        "0  female        group B           bachelor's degree      standard   \n",
        "1  female        group C                some college      standard   \n",
        "2  female        group B             master's degree      standard   \n",
        "3    male        group A          associate's degree  free/reduced   \n",
        "4    male        group C                some college      standard   \n",
        "\n",
-       "  test preparation course  reading score  writing score  \n",
+       "  test_preparation_course  reading_score  writing score  \n",
        "0                    none             72             74  \n",
        "1               completed             90             88  \n",
        "2                    none             95             93  \n",
@@ -281,18 +281,18 @@
      "output_type": "stream",
      "text": [
       "Categories in 'gender': ['female' 'male']\n",
-      "Categories in 'race/ethnicity': ['group B' 'group C' 'group A' 'group D' 'group E']\n",
-      "Categories in 'parental level of education': [\"bachelor's degree\" 'some college' \"master's degree\" \"associate's degree\"\n",
+      "Categories in 'race_ethnicity': ['group B' 'group C' 'group A' 'group D' 'group E']\n",
+      "Categories in 'parental_level_of_education': [\"bachelor's degree\" 'some college' \"master's degree\" \"associate's degree\"\n",
       " 'high school' 'some high school']\n",
       "Categories in 'lunch': ['standard' 'free/reduced']\n",
-      "Categories in 'test preparation course': ['none' 'completed']\n"
+      "Categories in 'test_preparation_course': ['none' 'completed']\n"
      ]
     }
    ],
    "source": [
     "categorical_cols = [\n",
-    "    'gender', 'race/ethnicity', 'parental level of education', \n",
-    "    'lunch', 'test preparation course'\n",
+    "    'gender', 'race_ethnicity', 'parental_level_of_education', \n",
+    "    'lunch', 'test_preparation_course'\n",
     "]\n",
     "\n",
     "for col in categorical_cols:\n",
