--- a/notebook/krish naik EDA file.ipynb
+++ b/notebook/krish naik EDA file.ipynb
@@ -260,8 +260,8 @@
     "- lunch : having lunch before test (standard or free/reduced) \n",
     "- test preparation course : complete or not complete before test\n",
     "- math score\n",
-    "- reading score\n",
-    "- writing score"
+    "- reading_score\n",
+    "- reading_score"
    ]
   },
   {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b9081742",
    "metadata": {},
    "outputs": [
@@ -720,13 +720,13 @@
     "print(\"Categories in 'race_ethnicity' variable:  \",end=\" \")\n",
     "print(df['race_ethnicity'].unique())\n",
     "\n",
-    "print(\"Categories in'parental level of education' variable:\",end=\" \" )\n",
+    "print(\"Categories in'parental_level_of_education' variable:\",end=\" \" )\n",
     "print(df['parental_level_of_education'].unique())\n",
     "\n",
     "print(\"Categories in 'lunch' variable:     \",end=\" \" )\n",
     "print(df['lunch'].unique())\n",
     "\n",
-    "print(\"Categories in 'test preparation course' variable:     \",end=\" \" )\n",
+    "print(\"Categories in 'test_preparation_course' variable:     \",end=\" \" )\n",
     "print(df['test_preparation_course'].unique())"
    ]
   },
@@ -1187,11 +1187,11 @@
    "source": [
     "plt.subplots(1,3,figsize=(25,6))\n",
     "plt.subplot(141)\n",
-    "ax =sns.histplot(data=df,x='average',kde=True,hue='parental level of education')\n",
+    "ax =sns.histplot(data=df,x='average',kde=True,hue='parental_level_of_education')\n",
     "plt.subplot(142)\n",
-    "ax =sns.histplot(data=df[df.gender=='male'],x='average',kde=True,hue='parental level of education')\n",
+    "ax =sns.histplot(data=df[df.gender=='male'],x='average',kde=True,hue='parental_level_of_education')\n",
     "plt.subplot(143)\n",
-    "ax =sns.histplot(data=df[df.gender=='female'],x='average',kde=True,hue='parental level of education')\n",
+    "ax =sns.histplot(data=df[df.gender=='female'],x='average',kde=True,hue='parental_level_of_education')\n",
     "plt.show()"
    ]
   },
@@ -1215,11 +1215,11 @@
    "source": [
     "plt.subplots(1,3,figsize=(25,6))\n",
     "plt.subplot(141)\n",
-    "ax =sns.histplot(data=df,x='average',kde=True,hue='race/ethnicity')\n",
+    "ax =sns.histplot(data=df,x='average',kde=True,hue='race_ethnicity')\n",
     "plt.subplot(142)\n",
-    "ax =sns.histplot(data=df[df.gender=='female'],x='average',kde=True,hue='race/ethnicity')\n",
+    "ax =sns.histplot(data=df[df.gender=='female'],x='average',kde=True,hue='race_ethnicity')\n",
     "plt.subplot(143)\n",
-    "ax =sns.histplot(data=df[df.gender=='male'],x='average',kde=True,hue='race/ethnicity')\n",
+    "ax =sns.histplot(data=df[df.gender=='male'],x='average',kde=True,hue='race_ethnicity')\n",
     "plt.show()"
    ]
   },
@@ -1254,11 +1254,11 @@
     "plt.title('MATH SCORES')\n",
     "sns.violinplot(y='math score',data=df,color='red',linewidth=3)\n",
     "plt.subplot(1, 4, 2)\n",
-    "plt.title('READING SCORES')\n",
-    "sns.violinplot(y='reading score',data=df,color='green',linewidth=3)\n",
+    "plt.title('reading_scoreS')\n",
+    "sns.violinplot(y='reading_score',data=df,color='green',linewidth=3)\n",
     "plt.subplot(1, 4, 3)\n",
-    "plt.title('WRITING SCORES')\n",
-    "sns.violinplot(y='writing score',data=df,color='blue',linewidth=3)\n",
+    "plt.title('reading_scoreS')\n",
+    "sns.violinplot(y='reading_score',data=df,color='blue',linewidth=3)\n",
     "plt.show()"
    ]
   },
@@ -1301,12 +1301,12 @@
     "\n",
     "\n",
     "plt.subplot(1, 5, 2)\n",
-    "size = df['race/ethnicity'].value_counts()\n",
+    "size = df['race_ethnicity'].value_counts()\n",
     "labels = 'Group C', 'Group D','Group B','Group E','Group A'\n",
     "color = ['red', 'green', 'blue', 'cyan','orange']\n",
     "\n",
     "plt.pie(size, colors = color,labels = labels,autopct = '.%2f%%')\n",
-    "plt.title('Race/Ethnicity', fontsize = 20)\n",
+    "plt.title('race_ethnicity', fontsize = 20)\n",
     "plt.axis('off')\n",
     "\n",
     "\n",
@@ -1322,7 +1322,7 @@
     "\n",
     "\n",
     "plt.subplot(1, 5, 4)\n",
-    "size = df['test preparation course'].value_counts()\n",
+    "size = df['test_preparation_course'].value_counts()\n",
     "labels = 'None', 'Completed'\n",
     "color = ['red','green']\n",
     "\n",
@@ -1332,7 +1332,7 @@
     "\n",
     "\n",
     "plt.subplot(1, 5, 5)\n",
-    "size = df['parental level of education'].value_counts()\n",
+    "size = df['parental_level_of_education'].value_counts()\n",
     "labels = 'Some College', \"Associate's Degree\",'High School','Some High School',\"Bachelor's Degree\",\"Master's Degree\"\n",
     "color = ['red', 'green', 'blue', 'cyan','orange','grey']\n",
     "\n",
@@ -1486,11 +1486,11 @@
    "outputs": [],
    "source": [
     "f,ax=plt.subplots(1,2,figsize=(20,10))\n",
-    "sns.countplot(x=df['race/ethnicity'],data=df,palette = 'bright',ax=ax[0],saturation=0.95)\n",
+    "sns.countplot(x=df['race_ethnicity'],data=df,palette = 'bright',ax=ax[0],saturation=0.95)\n",
     "for container in ax[0].containers:\n",
     "    ax[0].bar_label(container,color='black',size=20)\n",
     "    \n",
-    "plt.pie(x = df['race/ethnicity'].value_counts(),labels=df['race/ethnicity'].value_counts().index,explode=[0.1,0,0,0,0],autopct='%1.1f%%',shadow=True)\n",
+    "plt.pie(x = df['race_ethnicity'].value_counts(),labels=df['race_ethnicity'].value_counts().index,explode=[0.1,0,0,0,0],autopct='%1.1f%%',shadow=True)\n",
     "plt.show()   "
    ]
   },
@@ -1519,7 +1519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Group_data2=df.groupby('race/ethnicity')\n",
+    "Group_data2=df.groupby('race_ethnicity')\n",
     "f,ax=plt.subplots(1,3,figsize=(20,8))\n",
     "sns.barplot(x=Group_data2['math score'].mean().index,y=Group_data2['math score'].mean().values,palette = 'mako',ax=ax[0])\n",
     "ax[0].set_title('Math score',color='#005ce6',size=20)\n",
@@ -1527,14 +1527,14 @@
     "for container in ax[0].containers:\n",
     "    ax[0].bar_label(container,color='black',size=15)\n",
     "\n",
-    "sns.barplot(x=Group_data2['reading score'].mean().index,y=Group_data2['reading score'].mean().values,palette = 'flare',ax=ax[1])\n",
-    "ax[1].set_title('Reading score',color='#005ce6',size=20)\n",
+    "sns.barplot(x=Group_data2['reading_score'].mean().index,y=Group_data2['reading_score'].mean().values,palette = 'flare',ax=ax[1])\n",
+    "ax[1].set_title('reading_score',color='#005ce6',size=20)\n",
     "\n",
     "for container in ax[1].containers:\n",
     "    ax[1].bar_label(container,color='black',size=15)\n",
     "\n",
-    "sns.barplot(x=Group_data2['writing score'].mean().index,y=Group_data2['writing score'].mean().values,palette = 'coolwarm',ax=ax[2])\n",
-    "ax[2].set_title('Writing score',color='#005ce6',size=20)\n",
+    "sns.barplot(x=Group_data2['reading_score'].mean().index,y=Group_data2['reading_score'].mean().values,palette = 'coolwarm',ax=ax[2])\n",
+    "ax[2].set_title('reading_score',color='#005ce6',size=20)\n",
     "\n",
     "for container in ax[2].containers:\n",
     "    ax[2].bar_label(container,color='black',size=15)"
@@ -1578,7 +1578,7 @@
    "source": [
     "plt.rcParams['figure.figsize'] = (15, 9)\n",
     "plt.style.use('fivethirtyeight')\n",
-    "sns.countplot(df['parental level of education'], palette = 'Blues')\n",
+    "sns.countplot(df['parental_level_of_education'], palette = 'Blues')\n",
     "plt.title('Comparison of Parental Education', fontweight = 30, fontsize = 20)\n",
     "plt.xlabel('Degree')\n",
     "plt.ylabel('count')\n",
@@ -1609,7 +1609,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.groupby('parental level of education').agg('mean').plot(kind='barh',figsize=(10,10))\n",
+    "df.groupby('parental_level_of_education').agg('mean').plot(kind='barh',figsize=(10,10))\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n",
     "plt.show()"
    ]
@@ -1682,12 +1682,12 @@
    "outputs": [],
    "source": [
     "f,ax=plt.subplots(1,2,figsize=(20,8))\n",
-    "sns.countplot(x=df['parental level of education'],data=df,palette = 'bright',hue='test preparation course',saturation=0.95,ax=ax[0])\n",
-    "ax[0].set_title('Students vs test preparation course ',color='black',size=25)\n",
+    "sns.countplot(x=df['parental_level_of_education'],data=df,palette = 'bright',hue='test_preparation_course',saturation=0.95,ax=ax[0])\n",
+    "ax[0].set_title('Students vs test_preparation_course ',color='black',size=25)\n",
     "for container in ax[0].containers:\n",
     "    ax[0].bar_label(container,color='black',size=20)\n",
     "    \n",
-    "sns.countplot(x=df['parental level of education'],data=df,palette = 'bright',hue='lunch',saturation=0.95,ax=ax[1])\n",
+    "sns.countplot(x=df['parental_level_of_education'],data=df,palette = 'bright',hue='lunch',saturation=0.95,ax=ax[1])\n",
     "for container in ax[1].containers:\n",
     "    ax[1].bar_label(container,color='black',size=20)   "
    ]
@@ -1728,11 +1728,11 @@
    "source": [
     "plt.figure(figsize=(12,6))\n",
     "plt.subplot(2,2,1)\n",
-    "sns.barplot (x=df['lunch'], y=df['math score'], hue=df['test preparation course'])\n",
+    "sns.barplot (x=df['lunch'], y=df['math score'], hue=df['test_preparation_course'])\n",
     "plt.subplot(2,2,2)\n",
-    "sns.barplot (x=df['lunch'], y=df['reading score'], hue=df['test preparation course'])\n",
+    "sns.barplot (x=df['lunch'], y=df['reading_score'], hue=df['test_preparation_course'])\n",
     "plt.subplot(2,2,3)\n",
-    "sns.barplot (x=df['lunch'], y=df['writing score'], hue=df['test preparation course'])"
+    "sns.barplot (x=df['lunch'], y=df['reading_score'], hue=df['test_preparation_course'])"
    ]
   },
   {
@@ -1763,9 +1763,9 @@
     "plt.subplot(141)\n",
     "sns.boxplot(df['math score'],color='skyblue')\n",
     "plt.subplot(142)\n",
-    "sns.boxplot(df['reading score'],color='hotpink')\n",
+    "sns.boxplot(df['reading_score'],color='hotpink')\n",
     "plt.subplot(143)\n",
-    "sns.boxplot(df['writing score'],color='yellow')\n",
+    "sns.boxplot(df['reading_score'],color='yellow')\n",
     "plt.subplot(144)\n",
     "sns.boxplot(df['average'],color='lightgreen')\n",
     "plt.show()"
